toggle screen added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <img id="worm" src="./images/enemy_worm.png">
   <img id="spider" src="./images/enemy_spider.png">
   <img id="playerImage" src="./images/player.png">
+  <button id="fullScreen">Toggle Touchscreen</button>
   <script src="./scripts/scripts.js"></script>
 </body>
 </html>
